Opened 15 years ago

Closed 15 years ago

#5897 closed bug (fixed)

"Defaults" button has no effect, "Revert" is never enabled

Reported by: bonefish Owned by: pulkomandy
Priority: normal Milestone: R1/alpha3
Component: Preferences/Locale Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev36595 (trunk)

Open Locale preflet and move e.g. German to the right list. The "Revert" button remains disabled. Pressing the "Defaults" button has no effect.

Change History (2)

comment:1 by axeld, 15 years ago

I've added a functional "Defaults" button in hrev36727, and hid the "Revert" button for now (forgot to mention it in the commit message).

comment:2 by pulkomandy, 15 years ago

Resolution: fixed
Status: newclosed

Revert button fixed in hrev37400.

Note: See TracTickets for help on using tickets.