 * Separate the Settings class from the locale preflet a little (it can be reused in other parts of the OS)  * Improve the settings class so it is able to handle a revert  * Re-enable the revert button in the preflet and make it work. This fixes #5897.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37400 a95241bf-73f2-0310-859d-f6bbb57e9c96